--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to Adebayo Adesegun Daniel's homepage!
+description: I love to explore and learn new stuffs!
